Fixed a couple of typos; expanded.

--- a/README
+++ b/README
@@ -15,6 +15,9 @@ Tested with source-compiled versions of Node.js:
 ( ./configure --without-ssl --prefix=/opt/node && make && make install )
 
 
+
+
+
 Introduction
 ------------
 
@@ -22,24 +25,38 @@ node-reverse-proxy is a simple reverse HTTP proxy, which is designed
 to listen upon a public IP address, and redirect each incoming
 request to a back-end server.
 
-Due to node.jss' scalable event-based model this reverse-proxy server
-can handle many many concurrent connections without the heavy-weight
-resource usage of a larger solution such as Apache.
+The reverse proxy is written with the intention that multiple virtual
+hosts will each have their own back-end server to handle them, so it
+must mediate incoming requests and dispatch each one to the appropriate
+server by examining the submitted Host-header  present in each incoming
+HTTP request.
+
+Due to the scalable event-based model node.js uses this reverse-proxy
+server can handle many many concurrent connections without the heavy-weight
+resource-usage of a larger solution such as Apache.
+
 
 
 Features
 --------
 
 In addition to proxying incoming connections to remote HTTP servers,
-on a per-vhost basis, this server can also rewrite requests before
-they are proxied.
+on a per-virtualhost basis, this server can also rewrite requests before
+they are proxied, and alter the response from the proxy server before
+it is sent back to the originating client.
 
-There are two ways that rewrites may be specified:
+Simple rewrites of incoming requests may be specified either by:
 
-  * Either via regular expressions, in a simpilar fashion to
-    Apache's mod_rewrite module.
+  * Regular expressions matched against the incoming URL requested, in
+    a similar fashion to the way that "RewriteRule" works in Apache's
+    mod_rewrite.
 
-  * Via Javascript callbacks, which allow more control.
+  * Via Javascript callbacks, which are based upon the requested URL
+    path.
+
+Both of these are demonstrated by the configuration files provided in
+the ./examples subdirectory.
+
 
 
 Installation
@@ -49,20 +66,13 @@ To install the software you need only have the node.js binary
 installed upon your system, and the "node-reverse-proxy.js" file
 located upon your filesystem.
 
-Once you've created a suitable configuration file, perhaps consulting
-the examples provided, you may launch your proxy via:
+Once you've created a suitable configuration file the proxy may
+be launched as:
 
    node ./node-reverse-proxy.js --config ./rules.js
 
 This will load the rules you've defined in the file "rules.js" and launch
 the server appropriately.
-
-
-Usage
------
-
-Simple use is demonstrated by the provided examples.  Further examples
-will be provided in due course.
 
 
 
