--- a/README
+++ b/README
@@ -9,6 +9,7 @@ Blog Entries:
     http://blog.steve.org.uk/tags/nodejs/
 
 Tested with source-compiled versions of Node.js:
+    Node.js v0.4.4
     Node.js v0.4.3
     Node.js v0.4.2
     Node.js v0.4.1
